--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="score">Счет успеха</div>
+    <div class="score">11</div>
+    <div class="score">Счет провала</div>
+    <div class="score">00</div>
   <main class="content">
     <div class="card">
         <div class="game">
