--- a/src/index.html
+++ b/src/index.html
@@ -14,22 +14,22 @@
   <main class="content">
     <div class="card">
         <div class="game">
-            <div class="hole hole1 hole_has-goblin">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole2">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole3">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole4">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole5">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole6">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole7">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole8">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole9">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole10">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole11">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole12">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole13">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole14">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole15">cursor: url(../pic/hammer.png),auto;</div>
-            <div class="hole hole16">cursor: url(../pic/hammer.png),auto;</div>
+            <div class="hole hole1 hole_has-goblin"></div>
+            <div class="hole hole2"></div>
+            <div class="hole hole3"></div>
+            <div class="hole hole4"></div>
+            <div class="hole hole5"></div>
+            <div class="hole hole6"></div>
+            <div class="hole hole7"></div>
+            <div class="hole hole8"></div>
+            <div class="hole hole9"></div>
+            <div class="hole hole10"></div>
+            <div class="hole hole11"></div>
+            <div class="hole hole12"></div>
+            <div class="hole hole13"></div>
+            <div class="hole hole14"></div>
+            <div class="hole hole15"></div>
+            <div class="hole hole16"></div>
         </div>
     </div>
 </main> 
