--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="score">`${currentScore}`</div>
-    <div class="score">11</div>
-    <div class="score">${failScore}</div>
-    <div class="score">00</div>
+    <div class="score">Счет успеха</div>
+    <div class="score success">11</div>
+    <div class="score">Счет провала</div>
+    <div class="score fail">00</div>
   <main class="content">
     <div class="card">
         <div class="game">
