--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <main class="content">
     <div class="card">
         <div class="game">
-            <div class="hole hole1 hole_has-goblin"></div>
+            <div class="hole hole1"></div>
             <div class="hole hole2"></div>
             <div class="hole hole3"></div>
             <div class="hole hole4"></div>
