--- a/src/index.html
+++ b/src/index.html
@@ -4,34 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Goblin Game</title>
+    <title>Card validation</title>
 </head>
 <body>
-    <div class="score">Счет успеха</div>
-    <div class="score success">0</div>
-    <div class="score">Счет провала</div>
-    <div class="score fail">0</div>
-  <main class="content">
-    <div class="card">
-        <div class="game">
-            <div class="hole hole1"></div>
-            <div class="hole hole2"></div>
-            <div class="hole hole3"></div>
-            <div class="hole hole4"></div>
-            <div class="hole hole5"></div>
-            <div class="hole hole6"></div>
-            <div class="hole hole7"></div>
-            <div class="hole hole8"></div>
-            <div class="hole hole9"></div>
-            <div class="hole hole10"></div>
-            <div class="hole hole11"></div>
-            <div class="hole hole12"></div>
-            <div class="hole hole13"></div>
-            <div class="hole hole14"></div>
-            <div class="hole hole15"></div>
-            <div class="hole hole16"></div>
-        </div>
-    </div>
-</main> 
+   
 </body>
 </html>
