--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,26 @@
     <title>Card validation</title>
 </head>
 <body>
-   
+    <form class="elements">
+        <div class="cardface">
+          <div class="card-number">
+            <label class="card-number__number">Номер карты</label>
+            <input class="card-number__data" type="text" id="input" placeholder="XXXX XXXX XXXX XXXX">
+            <div class="maestro hidden">
+                <img src="../pic/maestro.png">
+            </div>
+            <div class="mastercard hidden">
+                <img src="../pic/mastercard.png">
+            </div>
+            <div class="mir hidden">
+                <img src="../pic/mir.png">
+            </div>
+            <div class="visa hidden">
+                <img src="../pic/visa.png">
+            </div>
+          </div>
+        </div>
+        <button class="button" type="button">Проверка</button>
+      </form>
 </body>
 </html>
